<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fitWindowsLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:gravity="center"
    tools:context="com.siddhant.videoplayer.VideoPlayer"
    android:orientation="horizontal">

    <FrameLayout

        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        tools:ignore="UselessParent">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="#80000000"
            android:orientation="horizontal"
            android:paddingEnd="50dp"
            android:visibility="visible"
            tools:ignore="RtlSymmetry">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="0dp"
                android:background="@null"
                android:contentDescription="@string/back"
                android:onClick="onBack"
                android:padding="15dp"
                android:src="@drawable/hplib_ic_back" />


            <TextView
                android:id="@+id/titleview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="@string/video_title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/size_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="#80000000"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/layout_fill_screen"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:onClick="FitToScreen"
                android:text="@string/fit_to_screen"
                android:textAlignment="center"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/layout_size"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:onClick="Fullscreen"
                android:text="@string/fullscreen"
                android:textAlignment="center"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/layout_resize"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:onClick="Normal"
                android:text="@string/normal"
                android:textAlignment="center"
                android:textColor="#FFF" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="20dp"
                android:fontFamily="serif-monospace"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/mediaControls"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="bottom"
            android:background="#80000000">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:buttonTint="@color/secondary_text_material_dark"
                android:fontFamily="serif-monospace"
                android:text="@string/play_as_audio"
                android:textAlignment="center"
                android:textColor="@color/secondary_text_material_dark"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                android:paddingEnd="0dp"
                android:visibility="visible"
                tools:ignore="RtlSymmetry">


                <ImageButton
                    android:id="@+id/previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/previous_button"
                    app:srcCompat="@android:drawable/ic_media_previous" />

                <ImageButton
                    android:id="@+id/rewind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/rewind_button"
                    app:srcCompat="@android:drawable/ic_media_rew" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp">

                    <ImageButton
                        android:id="@+id/play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/play_button"
                        app:srcCompat="@android:drawable/ic_media_play" />


                    <ImageButton
                        android:id="@+id/pause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="0dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/pause_button"
                        app:srcCompat="@android:drawable/ic_media_pause" />

                </LinearLayout>


                <ImageButton
                    android:id="@+id/forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/forward_button"
                    app:srcCompat="@android:drawable/ic_media_ff" />


                <ImageButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/next_button"
                    app:srcCompat="@android:drawable/ic_media_next" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginStart="0dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:ignore="RtlSymmetry">

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="550dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingBottom="10dp"
                    android:progressBackgroundTint="#ffffff" />

                <TextView
                    android:id="@+id/videoTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/secondary_text_material_dark"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>
